Create diamond shape

--- a/diamond/diamondstyle.css
+++ b/diamond/diamondstyle.css
@@ -16,6 +16,7 @@ body {
   position: relative;
   width: 200px;
   height: 200px;
+  transform: rotate(45deg);
 }
 
 span:nth-child(1) {
@@ -24,10 +25,10 @@ span:nth-child(1) {
   left: 0;
   width: 0;
   height: 0;
-  border-top: 50px solid yellow;
+  border-top: 50px solid transparent;
   border-right: 50px solid red;
   border-bottom: 50px solid blue;
-  border-left: 50px solid darkgreen;
+  border-left: 50px solid transparent;
 }
 
 span:nth-child(2) {
