--- a/diamond/diamondstyle.css
+++ b/diamond/diamondstyle.css
@@ -26,8 +26,8 @@ span:nth-child(1) {
   width: 0;
   height: 0;
   border-top: 50px solid transparent;
-  border-right: 50px solid red;
-  border-bottom: 50px solid blue;
+  border-right: 50px solid #20bc7d;
+  border-bottom: 50px solid #26c893;
   border-left: 50px solid transparent;
 }
 
@@ -37,10 +37,10 @@ span:nth-child(2) {
   left: 50%;
   width: 0;
   height: 0;
-  border-top: 50px solid yellow;
-  border-right: 50px solid red;
-  border-bottom: 50px solid blue;
-  border-left: 50px solid darkgreen;
+  border-top: 50px solid #1fb67c;
+  border-right: 50px solid #20bc7d;
+  border-bottom: 50px solid #26c893;
+  border-left: 50px solid #55ddb9;
 }
 
 span:nth-child(3) {
@@ -49,10 +49,10 @@ span:nth-child(3) {
   left: 0;
   width: 0;
   height: 0;
-  border-top: 50px solid yellow;
-  border-right: 50px solid red;
-  border-bottom: 50px solid blue;
-  border-left: 50px solid darkgreen;
+  border-top: 50px solid #1fb67c;
+  border-right: 50px solid #20bc7d;
+  border-bottom: 50px solid #26c893;
+  border-left: 50px solid #55ddb9;
 }
 
 span:nth-child(4) {
@@ -61,8 +61,8 @@ span:nth-child(4) {
   left: 50%;
   width: 0;
   height: 0;
-  border-top: 50px solid yellow;
-  border-right: 50px solid red;
-  border-bottom: 50px solid blue;
-  border-left: 50px solid darkgreen;
+  border-top: 50px solid #1fb67c;
+  border-right: 50px solid #20bc7d;
+  border-bottom: 50px solid #26c893;
+  border-left: 50px solid #55ddb9;
 }
