--- a/camera/camera.css
+++ b/camera/camera.css
@@ -45,3 +45,14 @@ body {
   border-left: 31px solid #26a69a;
   border-radius: 50%;
 }
+
+.flash {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  box-shadow: 0 4px 0 0 #c0c0c0;
+  right: 15px;
+  top: 15px;
+}
