--- a/batman/batman.css
+++ b/batman/batman.css
@@ -71,3 +71,40 @@ body {
   right: 68px;
   transform: rotate(15deg);
 }
+
+.o5 {
+  position: absolute;
+  width: 37px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #fdff00;
+  top: 0;
+  left: 57px;
+}
+
+.sq1 {
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  background-color: #fdff00;
+  top: 0;
+  left: 74px;
+}
+.o6 {
+  position: absolute;
+  width: 37px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #fdff00;
+  top: 0;
+  right: 57px;
+}
+
+.sq2 {
+  position: absolute;
+  height: 20px;
+  width: 20px;
+  background-color: #fdff00;
+  top: 0;
+  right: 74px;
+}
