Add second centered white circle on top of base red circle

--- a/captain_america/captain.css
+++ b/captain_america/captain.css
@@ -13,4 +13,14 @@ body {
   height: 260px;
   background-color: #ff4040;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.c2 {
+  width: 210px;
+  height: 210px;
+  background-color: white;
+  border-radius: 50%;
 }
