--- a/captain_america/captain.css
+++ b/captain_america/captain.css
@@ -33,4 +33,14 @@ body {
   height: 150px;
   background-color: #ff4040;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.center {
+  width: 100px;
+  height: 100px;
+  background-color: #306fd4;
+  border-radius: 50%;
 }
