--- a/captain_america/captain.css
+++ b/captain_america/captain.css
@@ -43,4 +43,32 @@ body {
   height: 100px;
   background-color: #306fd4;
   border-radius: 50%;
+  position: relative;
+}
+
+.arrow {
+  position: absolute;
+  border-top: 35px solid white;
+  border-left: 48px solid transparent;
+  border-right: 48px solid transparent;
+  border-bottom: 48px solid transparent;
+  width: 0;
+  height: 0;
+}
+
+.top {
+  top: 35px;
+  left: 2px;
+}
+
+.left {
+  top: 16px;
+  left: -24px;
+  transform: rotate(72deg);
+}
+
+.right {
+  top: 16px;
+  left: 24px;
+  transform: rotate(-72deg);
 }
