--- a/gear/gear.css
+++ b/gear/gear.css
@@ -13,3 +13,14 @@ body {
   background-color: #5dc59d;
   border-radius: 50%;
 }
+
+.gear-inner {
+  width: 55px;
+  height: 55px;
+  background-color: white;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
