--- a/git logo/gitlogo.css
+++ b/git logo/gitlogo.css
@@ -15,3 +15,11 @@ body {
   border-radius: 15px;
   position: relative;
 }
+
+.line1 {
+  width: 110px;
+  height: 12px;
+  background-color: white;
+  position: absolute;
+  top: 40px;
+}
