--- a/git logo/gitlogo.css
+++ b/git logo/gitlogo.css
@@ -23,3 +23,14 @@ body {
   position: absolute;
   top: 40px;
 }
+
+.line1:before {
+  content: "";
+  width: 30px;
+  height: 30px;
+  background-color: white;
+  border-radius: 50%;
+  position: absolute;
+  left: 30px;
+  top: -8px;
+}
