--- a/git logo/gitlogo.css
+++ b/git logo/gitlogo.css
@@ -54,3 +54,14 @@ body {
   top: 70px;
   left: 30px;
 }
+
+.line2:before {
+  content: "";
+  width: 30px;
+  height: 30px;
+  background-color: white;
+  border-radius: 50%;
+  position: absolute;
+  left: 70px;
+  top: -8px;
+}
