--- a/google_logo/google.css
+++ b/google_logo/google.css
@@ -7,3 +7,19 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.wrap {
+  width: 150px;
+  height: 150px;
+  position: relative;
+}
+
+.top {
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  border-top: 30px solid #e33e2b;
+  border-right: 30px solid transparent;
+  border-bottom: 30px solid #2ba14b;
+  border-left: 30px solid #f1b500;
+}
