--- a/google_logo/google.css
+++ b/google_logo/google.css
@@ -22,4 +22,16 @@ body {
   border-right: 30px solid transparent;
   border-bottom: 30px solid #2ba14b;
   border-left: 30px solid #f1b500;
+  border-radius: 50%;
+}
+
+.half {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  border: 30px solid transparent;
+  border-right: 30px solid #3a7cec;
+  transform: rotate(45deg);
+  border-radius: 50%;
+  z-index: -1;
 }
