--- a/instagram logo/instagram.css
+++ b/instagram logo/instagram.css
@@ -8,3 +8,10 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background: #f7f7f7;
 }
+
+.logo {
+  height: 200px;
+  width: 200px;
+  border-radius: 60px;
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
+}
