--- a/instagram logo/instagram.css
+++ b/instagram logo/instagram.css
@@ -14,4 +14,16 @@ body {
   width: 200px;
   border-radius: 60px;
   background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.square {
+  width: 140px;
+  height: 140px;
+  background-color: transparent;
+  border: 12px solid white;
+  border-radius: 45px;
+  position: relative;
 }
