--- a/instagram logo/instagram.css
+++ b/instagram logo/instagram.css
@@ -26,4 +26,15 @@ body {
   border: 12px solid white;
   border-radius: 45px;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.circle-big {
+  height: 60px;
+  width: 60px;
+  background-color: transparent;
+  border: 12px solid white;
+  border-radius: 50%;
 }
