Add and position small white dot to complete logo

--- a/instagram logo/instagram.css
+++ b/instagram logo/instagram.css
@@ -38,3 +38,13 @@ body {
   border: 12px solid white;
   border-radius: 50%;
 }
+
+.circle-small {
+  height: 15px;
+  width: 15px;
+  background-color: white;
+  border-radius: 50%;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
