--- a/panda_drawing/panda.css
+++ b/panda_drawing/panda.css
@@ -5,3 +5,12 @@ body {
   align-items: center;
   background: white;
 }
+
+.panda {
+  width: 300px;
+  height: 300px;
+  background-color: white;
+  border: 12px solid black;
+  border-radius: 50%;
+  position: relative;
+}
