--- a/panda_drawing/panda.css
+++ b/panda_drawing/panda.css
@@ -14,3 +14,49 @@ body {
   border-radius: 50%;
   position: relative;
 }
+
+.eye-left {
+  position: absolute;
+  width: 115px;
+  height: 58px;
+  background-color: black;
+  left: 10px;
+  top: 45%;
+  border-radius: 0 0 115px 115px;
+  transform: rotate(30deg);
+  overflow: hidden;
+}
+
+.left-ball {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background-color: black;
+  border: 12px solid white;
+  top: -50%;
+  left: 32%;
+  border-radius: 50%;
+}
+
+.eye-right {
+  position: absolute;
+  width: 115px;
+  height: 58px;
+  background-color: black;
+  right: 10px;
+  top: 45%;
+  border-radius: 0 0 115px 115px;
+  transform: rotate(-30deg);
+  overflow: hidden;
+}
+
+.right-ball {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background-color: black;
+  border: 12px solid white;
+  top: -50%;
+  right: 32%;
+  border-radius: 50%;
+}
