--- a/panda_drawing/panda.css
+++ b/panda_drawing/panda.css
@@ -60,3 +60,25 @@ body {
   right: 32%;
   border-radius: 50%;
 }
+
+.nose {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  background-color: black;
+  border-radius: 50%;
+  top: 60%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.mouth {
+  position: absolute;
+  width: 50px;
+  height: 10px;
+  background-color: black;
+  border-radius: 10px;
+  top: 75%;
+  left: 50%;
+  transform: translateX(-50%);
+}
