--- a/watermelon/watermelon.css
+++ b/watermelon/watermelon.css
@@ -15,4 +15,28 @@ body {
   border-left: 20px solid #5af5b6;
   border-bottom: 20px solid #5af5b6;
   border-right: 20px solid #5af5b6;
+  border-bottom-left-radius: 200px;
+  border-bottom-right-radius: 200px;
+}
+
+span {
+  width: 10px;
+  height: 10px;
+  background-color: #262626;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 20px;
+}
+
+span:nth-child(7) {
+  opacity: 0;
+}
+span:nth-child(12) {
+  opacity: 0;
+}
+span:nth-child(13) {
+  opacity: 0;
+}
+span:nth-child(14) {
+  opacity: 0;
 }
