Add and position base bracket logo shape

--- a/brackets/brackets.css
+++ b/brackets/brackets.css
@@ -7,3 +7,11 @@ body {
   align-items: center;
   background-color: #222;
 }
+
+.brackets {
+  width: 200px;
+  height: 175px;
+  background-color: white;
+  border-radius: 31px;
+  box-shadow: 0 0 0 28px #28a9e1, 0 28px 0 28px #115a91;
+}
