--- a/donut/donut.css
+++ b/donut/donut.css
@@ -3,9 +3,35 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #fff09h;
+  background-color: #fff09b;
 }
 
 * {
   box-sizing: border-box;
+}
+
+.donut {
+  position: relative;
+  width: 280px;
+  height: 280px;
+}
+
+.donut-body {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #f77778;
+  border: 2px solid #003459;
+  border-radius: 50%;
+}
+
+.donut-body:before {
+  content: "";
+  position: absolute;
+  width: 93%;
+  height: 93%;
+  background-color: #faa7a8;
+  top: 3px;
+  right: 3px;
+  border-radius: 50%;
 }
