--- a/figma_logo/figma.css
+++ b/figma_logo/figma.css
@@ -11,7 +11,6 @@ body {
 .logo {
   width: 180px;
   height: 270px;
-  background-color: blue;
   display: flex;
   flex-wrap: wrap;
 }
@@ -23,16 +22,26 @@ body {
 
 .part-1 {
   background-color: #ee4e2a;
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
 }
 .part-2 {
   background-color: #fb7266;
+  border-top-right-radius: 50%;
+  border-bottom-right-radius: 50%;
 }
 .part-3 {
   background-color: #a061fa;
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
 }
 .part-4 {
   background-color: #2ebdfa;
+  border-radius: 50%;
 }
 .part-5 {
   background-color: #00ce84;
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
 }
