--- a/react_logo/react_logo.css
+++ b/react_logo/react_logo.css
@@ -12,3 +12,11 @@ body {
   align-items: center;
   margin: 0;
 }
+
+.react {
+  width: 300px;
+  height: 100px;
+  border: 3px solid #61dafb;
+  border-radius: 50%;
+  position: relative;
+}
