--- a/react_logo/react_logo.css
+++ b/react_logo/react_logo.css
@@ -32,3 +32,15 @@ body {
   border-radius: 50%;
   transform: rotate(60deg);
 }
+
+.react:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 3px solid #61dafb;
+  border-radius: 50%;
+  transform: rotate(-60deg);
+}
