--- a/react_logo/react_logo.css
+++ b/react_logo/react_logo.css
@@ -44,3 +44,14 @@ body {
   border-radius: 50%;
   transform: rotate(-60deg);
 }
+
+.circle {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background-color: #61dafb;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
