--- a/lg_logo/lg_logo.css
+++ b/lg_logo/lg_logo.css
@@ -14,3 +14,15 @@ body {
   border-radius: 50%;
   position: relative;
 }
+
+.line1 {
+  position: absolute;
+  width: 400px;
+  height: 400px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-45deg);
+  border-radius: 50%;
+  border: 20px solid white;
+  border-right-color: transparent;
+}
