Add and position horizontal line of letter G

--- a/lg_logo/lg_logo.css
+++ b/lg_logo/lg_logo.css
@@ -26,3 +26,13 @@ body {
   border: 20px solid white;
   border-right-color: transparent;
 }
+
+.line2 {
+  position: absolute;
+  width: 150px;
+  height: 20px;
+  background-color: white;
+  top: 50%;
+  right: 30px;
+  transform: translateY(-50%);
+}
