--- a/lg_logo/lg_logo.css
+++ b/lg_logo/lg_logo.css
@@ -36,3 +36,13 @@ body {
   right: 30px;
   transform: translateY(-50%);
 }
+
+.circle {
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  border-radius: 50%;
+  position: absolute;
+  top: 120px;
+  left: 130px;
+}
