--- a/lg_logo/lg_logo.css
+++ b/lg_logo/lg_logo.css
@@ -56,3 +56,12 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.line4 {
+  position: absolute;
+  width: 70px;
+  height: 20px;
+  background-color: white;
+  top: 370px;
+  left: 240px;
+}
