--- a/ice_cream/ice_cream.css
+++ b/ice_cream/ice_cream.css
@@ -19,3 +19,15 @@ body {
   border-radius: 45% 45% 10% 10%;
   position: relative;
 }
+
+.stick {
+  width: 50px;
+  height: 275px;
+  background-color: #e6ac84;
+  border-radius: 40%;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: -1;
+}
