--- a/ice_cream/ice_cream.css
+++ b/ice_cream/ice_cream.css
@@ -45,3 +45,17 @@ body {
 .side2 {
   left: 150px;
 }
+
+.melting {
+  width: 30px;
+  height: 60px;
+  background-color: white;
+  border-radius: 30px;
+  position: absolute;
+  bottom: 0;
+  left: 50px;
+}
+
+.melting2 {
+  left: 180px;
+}
