--- a/pikachu/pikachu.css
+++ b/pikachu/pikachu.css
@@ -52,3 +52,17 @@ body {
   top: 44%;
   border-radius: 8px 8px 16px 16px;
 }
+
+.cheek {
+  width: 48px;
+  height: 48px;
+  background-color: #e15b42;
+  border-radius: 50%;
+  position: absolute;
+  top: 48%;
+  left: 4%;
+}
+
+.cheek.-r {
+  left: 80%;
+}
