Create and position mouth

--- a/pikachu/pikachu.css
+++ b/pikachu/pikachu.css
@@ -66,3 +66,13 @@ body {
 .cheek.-r {
   left: 80%;
 }
+
+.mouth {
+  width: 96px;
+  height: 96px;
+  background-color: #83342f;
+  border-radius: 16px 16px 50% 50%;
+  position: absolute;
+  left: 36%;
+  top: 50%;
+}
