--- a/koala/koala.css
+++ b/koala/koala.css
@@ -11,3 +11,21 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.container {
+  position: relative;
+  width: 600px;
+  height: 420px;
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.head {
+  position: absolute;
+  width: 300px;
+  height: 285px;
+  background: #a6becf;
+  border-radius: 50%;
+}
