--- a/koala/koala.css
+++ b/koala/koala.css
@@ -29,3 +29,40 @@ body {
   background: #a6becf;
   border-radius: 50%;
 }
+
+.head-copy {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #a6becf;
+  border-radius: 50%;
+  z-index: 2;
+}
+
+.ear {
+  position: absolute;
+  width: 180px;
+  height: 185px;
+  background: #a6becf;
+  border-radius: 50%;
+  top: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ear-left {
+  left: -60px;
+}
+
+.ear-right {
+  right: -60px;
+}
+
+.inner-ear {
+  position: absolute;
+  width: 80%;
+  height: 80%;
+  background: #819caf;
+  border-radius: 50%;
+}
