--- a/owl/owl.css
+++ b/owl/owl.css
@@ -27,3 +27,14 @@ body {
   height: 130px;
   background-color: #6d4b27;
 }
+
+.head::before {
+  content: "";
+  width: 250px;
+  height: 230px;
+  background-color: #222729;
+  position: absolute;
+  border-radius: 50%;
+  bottom: 50px;
+  left: -10px;
+}
