--- a/owl/owl.css
+++ b/owl/owl.css
@@ -38,3 +38,20 @@ body {
   bottom: 50px;
   left: -10px;
 }
+
+.eye-container {
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  background: #6d4b27;
+  border-radius: 50%;
+  top: 80px;
+}
+
+.eye-container.left {
+  left: 185px;
+}
+
+.eye-container.right {
+  right: 185px;
+}
