--- a/owl/owl.css
+++ b/owl/owl.css
@@ -16,7 +16,6 @@ body {
   position: relative;
   width: 600px;
   height: 500px;
-  background-color: green;
   display: flex;
   justify-content: center;
   z-index: -10;
@@ -187,4 +186,14 @@ body {
   background: #fff;
   bottom: 25px;
   border-radius: 10px;
+}
+
+.forehead {
+  width: 200px;
+  height: 50px;
+  background: #6d4b27;
+  position: absolute;
+  left: 200px;
+  top: 75px;
+  clip-path: polygon(50% 100%, 0 0, 100% 0);
 }
