--- a/snowman/snowman.css
+++ b/snowman/snowman.css
@@ -53,3 +53,24 @@ body {
   left: 49px;
   clip-path: polygon(50% 100%, 30% 0, 70% 0);
 }
+
+.hat {
+  position: relative;
+  width: 120px;
+  height: 10px;
+  background: #2b303a;
+  border-radius: 4px;
+  bottom: 50px;
+  left: 15px;
+  transform: rotate(20deg);
+}
+
+.hat-top {
+  position: relative;
+  height: 50px;
+  width: 90px;
+  background: #2b303a;
+  bottom: 42px;
+  left: 15px;
+  clip-path: polygon(20% 0%, 80% 0, 100% 100%, 0% 100%);
+}
