--- a/snowman/snowman.css
+++ b/snowman/snowman.css
@@ -74,3 +74,29 @@ body {
   left: 15px;
   clip-path: polygon(20% 0%, 80% 0, 100% 100%, 0% 100%);
 }
+
+.snowman-body {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  background: #fff;
+  border-radius: 50%;
+  top: 90px;
+  left: 70px;
+}
+
+.b1,
+.b2,
+.b3 {
+  height: 15px;
+  width: 15px;
+  background: #2b303a;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.buttons {
+  position: relative;
+  top: 60px;
+  left: 90px;
+}
