--- a/vampire/vampire.css
+++ b/vampire/vampire.css
@@ -148,3 +148,35 @@ body {
   left: 2px;
   border-radius: 50%;
 }
+
+.mouth {
+  position: absolute;
+  width: 225px;
+  height: 22px;
+  /* background: blue; */
+  top: 70%;
+  left: 50%;
+  transform: translateX(-50%);
+  overflow: hidden;
+}
+
+.mouth::before {
+  content: "";
+  position: absolute;
+  width: 225px;
+  height: 44px;
+  background: #333;
+  top: 0;
+  border-radius: 50%;
+}
+
+.mouth::after {
+  content: "";
+  position: absolute;
+  width: 220px;
+  height: 44px;
+  background: #edd9f0;
+  top: 2px;
+  left: 2px;
+  border-radius: 50%;
+}
