--- a/vampire/vampire.css
+++ b/vampire/vampire.css
@@ -13,7 +13,7 @@ body {
 
 .vampire {
   width: 600px;
-  height: 100%;
+  height: 680px;
   background: #47526d;
   position: relative;
   overflow: hidden;
@@ -29,6 +29,7 @@ body {
   border-radius: 50%;
   top: 10%;
   overflow: hidden;
+  z-index: 3;
 }
 
 .hair {
@@ -121,7 +122,6 @@ body {
   position: absolute;
   width: 44px;
   height: 22px;
-  /* background: blue; */
   top: 60%;
   left: 50%;
   transform: translateX(-50%);
@@ -153,7 +153,6 @@ body {
   position: absolute;
   width: 225px;
   height: 22px;
-  /* background: blue; */
   top: 70%;
   left: 50%;
   transform: translateX(-50%);
@@ -199,4 +198,41 @@ body {
 .right-tooth {
   right: 35%;
   transform: rotate(5deg);
+}
+
+.collar {
+  position: absolute;
+  background-color: #000;
+  height: 40%;
+  width: 100%;
+  top: 65%;
+  clip-path: polygon(0 0, 100% 0, 75% 100%, 25% 100%);
+}
+
+.cape {
+  position: absolute;
+  width: 60%;
+  height: 30%;
+  background: #fff;
+  bottom: 0;
+  border-radius: 50% 50% 0 0;
+}
+
+.bow {
+  position: absolute;
+  height: 170px;
+  width: 100px;
+  background: #000;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.button {
+  width: 15px;
+  height: 15px;
+  background: red;
+  border-radius: 50%;
 }
