--- a/beaver/beaver.css
+++ b/beaver/beaver.css
@@ -7,3 +7,22 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.frame {
+  width: 350px;
+  height: 420px;
+  background-color: #f0d0d1;
+  border: 20px solid white;
+  position: relative;
+}
+
+.body {
+  position: absolute;
+  width: 70%;
+  height: 90%;
+  background-color: #a35a37;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50% 50% 0 0;
+}
