--- a/beaver/beaver.css
+++ b/beaver/beaver.css
@@ -103,3 +103,58 @@ body {
   transform: translateX(-50%);
   border-radius: 50%;
 }
+
+.eye-left {
+  position: absolute;
+  width: 20px;
+  height: 10px;
+  border: 3px solid #3c2114;
+  border-top: 0;
+  border-bottom-left-radius: 100px;
+  border-bottom-right-radius: 100px;
+  top: 35%;
+  left: 32%;
+}
+
+.eye-right {
+  position: absolute;
+  width: 20px;
+  height: 10px;
+  border: 3px solid #3c2114;
+  border-top: 0;
+  border-bottom-left-radius: 100px;
+  border-bottom-right-radius: 100px;
+  top: 35%;
+  right: 32%;
+}
+
+.lashes {
+  position: absolute;
+  width: 2px;
+  height: 8px;
+  background-color: #3c2114;
+  bottom: -8px;
+  left: 48%;
+}
+
+.lashes::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #3c2114;
+  left: -10px;
+  top: -2px;
+  transform: rotate(20deg);
+}
+
+.lashes::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #3c2114;
+  right: -10px;
+  top: -2px;
+  transform: rotate(-20deg);
+}
