--- a/beaver/beaver.css
+++ b/beaver/beaver.css
@@ -275,3 +275,27 @@ body {
   right: 5px;
   transform: rotate(20deg);
 }
+
+.ear-left {
+  position: absolute;
+  width: 38px;
+  height: 46px;
+  background-color: #f0a77e;
+  border: 8px solid #a35a37;
+  top: 15%;
+  left: 18%;
+  border-radius: 50%;
+  transform: rotate(-45deg);
+}
+
+.ear-right {
+  position: absolute;
+  width: 38px;
+  height: 46px;
+  background-color: #f0a77e;
+  border: 8px solid #a35a37;
+  top: 15%;
+  right: 18%;
+  border-radius: 50%;
+  transform: rotate(45deg);
+}
