--- a/clock_books_cactus_shelf/bookshelf.css
+++ b/clock_books_cactus_shelf/bookshelf.css
@@ -1,5 +1,7 @@
 body {
-  /* background-color: #;   */
+  background-color: #ecd590;
+  margin: 0;
+  padding: 0;
   height: 100vh;
   display: flex;
   justify-content: center;
