--- a/clock_books_cactus_shelf/bookshelf.css
+++ b/clock_books_cactus_shelf/bookshelf.css
@@ -7,3 +7,21 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.shelf {
+  width: 520px;
+  height: 20px;
+  background-color: #5a3f21;
+  position: relative;
+}
+
+.clock {
+  width: 110px;
+  height: 110px;
+  background-color: #e9e6c9;
+  border: 10px solid #5aa668;
+  border-radius: 50%;
+  position: absolute;
+  left: 30px;
+  top: -135px;
+}
