--- a/clock_books_cactus_shelf/bookshelf.css
+++ b/clock_books_cactus_shelf/bookshelf.css
@@ -25,3 +25,14 @@ body {
   left: 30px;
   top: -135px;
 }
+
+.knot {
+  width: 10px;
+  height: 10px;
+  background-color: #9d374f;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
