--- a/clock_books_cactus_shelf/bookshelf.css
+++ b/clock_books_cactus_shelf/bookshelf.css
@@ -183,3 +183,12 @@ body {
   top: 0;
   right: 0;
 }
+
+.cactus {
+  width: 100px;
+  height: 180px;
+  background-color: red;
+  position: absolute;
+  left: 380px;
+  top: -180px;
+}
