Create and position plant pot

--- a/clock_books_cactus_shelf/bookshelf.css
+++ b/clock_books_cactus_shelf/bookshelf.css
@@ -192,3 +192,28 @@ body {
   left: 380px;
   top: -180px;
 }
+
+.pot {
+  width: 100%;
+  height: 50%;
+  position: absolute;
+  bottom: 0;
+  background-color: blue;
+}
+
+.pot-bottom {
+  width: 100%;
+  height: 70%;
+  background-color: #cd4f17;
+  position: absolute;
+  bottom: 0;
+}
+
+.pot-top {
+  width: 140%;
+  height: 30%;
+  background-color: #a03d12;
+  position: absolute;
+  top: 0;
+  left: -20%;
+}
