Create and position Homers forehead

--- a/homer/homer.css
+++ b/homer/homer.css
@@ -7,3 +7,21 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.head {
+  position: relative;
+  width: 215px;
+  height: 405px;
+  background-color: green;
+}
+
+.forehead {
+  position: absolute;
+  width: 170px;
+  height: 200px;
+  background-color: #fed90f;
+  border: 1px solid #000;
+  top: 10px;
+  border-radius: 60%/50%;
+  transform: rotate(-18deg);
+}
