--- a/homer/homer.css
+++ b/homer/homer.css
@@ -25,3 +25,23 @@ body {
   border-radius: 60%/50%;
   transform: rotate(-18deg);
 }
+
+.hair1 {
+  position: absolute;
+  width: 80px;
+  height: 70px;
+  border-top: 2px solid #000;
+  top: 15px;
+  border-radius: 50%;
+  transform: rotate(-40deg);
+}
+
+.hair2 {
+  position: absolute;
+  width: 80px;
+  height: 70px;
+  border-top: 2px solid #000;
+  left: 10px;
+  border-radius: 50%;
+  transform: rotate(-30deg);
+}
