--- a/homer/homer.css
+++ b/homer/homer.css
@@ -87,3 +87,23 @@ body {
   left: 25px;
   top: 40px;
 }
+
+.f-side1 {
+  position: absolute;
+  width: 140px;
+  height: 60px;
+  background-color: #fed90f;
+  top: 185px;
+  left: 30px;
+}
+
+.f-side2 {
+  position: absolute;
+  width: 40px;
+  height: 60px;
+  background-color: #fed90f;
+  top: 165px;
+  left: 22px;
+  transform: rotate(-11deg);
+  border-left: 1px solid black;
+}
